fixed overflow of user_index box

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -103,5 +103,5 @@ input[type="search"] {
 
 .logo:hover{
   color: #272D35;
-  transition: 2,5s;
+  transition: all 0.5s linear;
 }
