--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -21,6 +21,7 @@
   height: 120px;
   margin-top: 29px;
   margin-left: 10px;
+  width: 100px;
 
   .profile-pic-show {
     border-radius: 50%;
